# alchemy

./: .gitignore  CMakeLists.txt  main.cpp
src/bus/: EventBus.h  EventBusSimple.h
src/core/: Track.cpp  Track.h  TrackCommands.h  TrackManager.cpp  TrackManager.h  TrackSinkImpl.cpp  TrackSinkImpl.h
src/core/audio/: AudioDefs.h  AudioEngine.cpp  AudioEngine.h  GraphSimple.h  IAudioProcessor.h  IGraph.h  INode.h
src/devices/: IFX.h  IFXFactory.h  ISampler.h  ISynth.h  SamplerNode.cpp  SamplerNode.h  SynthNode.h
src/mixer/: IMixer.h  MixerSimple.h
src/params/: Param.h  ParamStoreSimple.h
src/platform/macos/: AudioOut.h  AudioOut.mm
src/project/: Project.h
src/sequencer/: Sequencer.h
src/ui/: UiFacade.cpp  UiFacade.h
src/utils/: SpscRing.h  TrackPath.h  WavLoader.cpp  WavLoader.h
tests/: CMakeLists.txt  TestSpscRing.cpp
